stringify-json 과제 추가

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "subject/be-sprint-calculator"]
 	path = subject/be-sprint-calculator
 	url = git@github.com:hipopotamus/be-sprint-calculator.git
+[submodule "subject/be-sprint-stringify-json"]
+	path = subject/be-sprint-stringify-json
+	url = git@github.com:hipopotamus/be-sprint-stringify-json.git
