--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "subject/be-sprint-stringify-json"]
 	path = subject/be-sprint-stringify-json
 	url = git@github.com:hipopotamus/be-sprint-stringify-json.git
+[submodule "pair/Section3/be-homework-controller"]
+	path = pair/Section3/be-homework-controller
+	url = git@github.com:hipopotamus/be-homework-controller.git
